# spinne

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  spinne-report.html  spinne-report.json  spinnen-netz.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: component_graph.rs  config.rs  file_visitor.rs  import_analyzer.rs  lib.rs  package_json.rs  reference_searcher.rs  resolve.rs  traverse.rs  ts_config_reader.rs  util.rs
crates/core/src/analyze/: component.rs  mod.rs  react.rs  reference.rs
crates/core/src/analyze/react/: analyzer.rs  children.rs  find_component_root.rs  find_import.rs  mod.rs  root_components.rs
crates/core/src/exports/: mod.rs
crates/core/src/graph/: component_graph.rs  mod.rs  specialized_graph.rs
crates/core/src/parse/: mod.rs  tsx.rs
crates/core/src/traverse/: mod.rs  package.rs  project.rs  project_types.rs  resolver.rs  workspace.rs
crates/html/: Cargo.toml  test.html
crates/html/src/: component-graph.html  lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
fixtures/project-exports/simple/src/: Button.tsx
fixtures/simple/src/: Button.tsx
src/: cli.test.ts  cli.ts  component_graph.rs  config.rs  file_visitor.rs  html_generator.rs  index.ts  lib.rs  logging.rs  main.rs  package_json.rs  project_traverser.rs  scan.ts  traverse.rs  ts_config_reader.rs  visitors.rs
src/features/report/: exports.ts  index.test.ts  index.ts  scan.ts  util.ts
src/mocks/: handlers.ts
src/templates/: component-graph.html
src/types/: estree-walker.d.ts
src/utils/: cliArgs.ts  error.test.ts  error.ts  logger.ts  path.ts
test/: setupFiles.ts
test/integration/: cli.test.ts  error.test.ts  report.test.ts
tests/: Cargo.toml  cli.rs  import.rs  integration_test.rs  integration_tests.rs
tests/src/: lib.rs
tests/tests/: cli.rs  import.rs
