[package]
name = "spinne"
version = "0.2.0"
description = "spinne is a cli tool that analyzes design system usage for react projects."
license = "MIT"
authors = ["Tim Richter <tim@timrichter.dev>"]
edition = "2021"
repository = "https://github.com/tim-richter/spinne"

[dependencies]
swc_common = { version = "1", features = ['tty-emitter']}
swc_ecma_ast = "1"
swc_ecma_loader = { version = "1", features = ['node', 'tsc']}
swc_ecma_visit = "1"
swc_ecma_parser = { version = "1", features = ['typescript']}
clap = { version = "4.5.16", features = ["derive"] }
petgraph = { version = "0.6"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
jsonc-parser = { version = "0.23", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
colored = "2.1"
ignore = "0.4"
open = "5"

[dev-dependencies]
tempfile = "3.2"
assert_cmd = "2.0"
predicates = "3.0"