[package]
name = "spinne"
version = "0.2.0"
description = "spinne is a cli tool that analyzes design system usage for react projects."
license = "MIT"
authors = ["Tim Richter <tim@timrichter.dev>"]
edition = "2021"
repository = "https://github.com/tim-richter/spinne"

[dependencies]
swc_common = { version = "4", features = ['tty-emitter']}
swc_ecma_ast = "4"
swc_ecma_loader = { version = "4", features = ['node', 'tsc']}
swc_ecma_visit = "4"
swc_ecma_parser = { version = "5", features = ['typescript']}
clap = { version = "4.5.20", features = ["derive"] }
petgraph = { version = "0.6"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
jsonc-parser = { version = "0.26", features = ["serde"] }
colored = "2.1"
ignore = "0.4"
open = "5"
indicatif = "0"
once_cell = "1"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.dev]
debug = true
opt-level = 0