repository = "https://github.com/tim-richter/spinne"

[workspace]
members = [
  "crates/core",
  "crates/cli",
  "crates/logger",
  "crates/html"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.dev]
debug = true
opt-level = 0
