[package]
name = "spinne-cli"
version = "0.2.1"
description = "spinne is a cli tool that analyzes design system usage for react projects."
edition = "2021"
license = "MIT"
authors = ["Tim Richter <tim@timrichter.dev>"]
repository = "https://github.com/tim-richter/spinne"

[dependencies]
spinne-core = { path = "../core" }
spinne-html = { path = "../html" }
spinne-logger = { path = "../logger" }
serde_json = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
open = "5"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
