[package]
name = "spinne"
version = "0.2.4"
description = "spinne is a cli tool that analyzes design system usage for react projects."
edition = "2021"
license = "MIT"
authors = ["Tim Richter <tim@timrichter.dev>"]
repository = "https://github.com/tim-richter/spinne"
readme = "../../README.md"

[dependencies]
spinne-core = "0.2.1"
spinne-html = "0.2.0"
spinne-logger = "0.2.0"
serde_json = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
open = "5"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
