[package]
name = "spinne-core"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Tim Richter <tim@timrichter.dev>"]
repository = "https://github.com/tim-richter/spinne"

[dependencies]
spinne-logger = { path = "../logger" }
petgraph = "0.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
glob = "0.3"
jsonc-parser = { version = "0.26", features = ["serde"] }
ignore = "0.4"
oxc_allocator = "0.40"
oxc_parser = "0.40"
oxc_semantic = "0.40"
oxc_span = "0.40"
itertools = "0.14.0"
oxc_ast = "0.40"
oxc-miette = "1"
oxc_resolver = "3"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
